--- a/apps/home/static/css/drop-down.css
+++ b/apps/home/static/css/drop-down.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0f0f0f;
+    background-color: #333333;
     padding-top: 2pt;
     padding-bottom: 2pt;
     padding-left: 4pt;
